# IDA-seminar-DataHunter

./: .gitignore  736_report.html  Chat.py  Chatbot.py  README.md  agent.py  analysis_report.html  client_main.py  pyproject.toml  requirements.txt  server_main.py  top_cities_report.html
frontend/: app.py
mcp_agent/: .env  .env_template  __init__.py  agent_gemini.py  mcp_client.py  mock_test_agent.py
mcp_server/: .env  .env_template  .gitignore  Chat.py  __init__.py  app.py  data_analysis.py  pyproject.toml  server.py  test_mcp_server.py  test_react_model.py
mcp_server/chart/: arrowchart.py  barchart.py  barhorizontalchart.py  boxplotchart.py  distributionchart.py  errorbarchart.py  fillbetweenchart.py  fillbetweenxchart.py  histchart.py  linechart.py  piechart.py  polarchart.py  quiverchart.py  scatterchart.py  stackplotchart.py  stemchart.py  stepchart.py  violinchart.py
mcp_server/db/: database.py
mcp_server/ml/: decision_tree.py  k-means.py  linear_regression.py
mcp_server/model/: model.py
mcp_server/prompt/: prompt.py
mcp_server/service/: customer_dataset_service.py  item_dataset_service.py  order_dataset_service.py  payment_dataset_service.py  product_dataset_service.py  revirew_dataset_service.py
mcp_server/tools/: __init__.py  db_tools.py  ml_tools.py  python_tools.py  stats_tools.py  visualization_tools.py
mcp_server/tools/charts/: barchart.py  barhchart.py  boxplotchart.py  histchart.py  linechart.py  pearson_correlation.py  piechart.py  scatterchart.py
mcp_server/utils/: index.py
pages/: Analysis_report.py
report_analysis/: result.html  (+8 more)
(+13 files in other folders)
