[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]
