[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.3",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.3.33",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]
